--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mapbox-gl": "^1.5.0",
-    "mapcraft": "^0.1.1",
-    "react-image-gallery": "^0.9.1",
-    "react-input-range": "^1.3.0",
-    "stylecraft": "^0.1.1",
-    "terraformer": "^1.0.9",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -24,16 +18,23 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^9.0.2",
     "jquery": "^3.6.3",
+    "mapbox-gl": "^1.5.0",
+    "mapcraft": "^0.1.1",
     "millify": "^5.0.1",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-circle-chart": "^1.0.4",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.2",
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-icons": "^4.7.1",
+    "react-image-gallery": "^0.9.1",
+    "react-input-range": "^1.3.0",
     "react-multi-carousel": "^2.8.2",
     "react-scripts": "5.0.1",
+    "stylecraft": "^0.1.1",
+    "terraformer": "^1.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
