--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^9.0.2",
     "jquery": "^3.6.3",
+    "lightbox.js-react": "^0.3.9",
     "mapbox-gl": "^1.5.0",
     "mapcraft": "^0.1.1",
     "millify": "^5.0.1",
@@ -30,8 +31,10 @@
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-icons": "^4.7.1",
     "react-image-gallery": "^0.9.1",
+    "react-images": "^1.2.0-beta.7",
     "react-input-range": "^1.3.0",
     "react-multi-carousel": "^2.8.2",
+    "react-photo-gallery": "^8.0.0",
     "react-scripts": "5.0.1",
     "stylecraft": "^0.1.1",
     "terraformer": "^1.0.9",
