--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "canvasjs": "^1.8.3",
     "framer-motion": "^9.0.2",
     "jquery": "^3.6.3",
     "lightbox.js-react": "^0.3.9",
