--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.2",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "canvasjs": "^1.8.3",
     "framer-motion": "^9.0.2",
@@ -34,6 +34,7 @@
     "react-image-gallery": "^0.9.1",
     "react-images": "^1.2.0-beta.7",
     "react-input-range": "^1.3.0",
+    "react-jquery-plugin": "^1.1.7",
     "react-multi-carousel": "^2.8.2",
     "react-photo-gallery": "^8.0.0",
     "react-scripts": "5.0.1",
@@ -68,7 +69,7 @@
   "devDependencies": {
     "admin-on-rest": "^1.4.1",
     "react-router-dom": "^6.8.0",
-    "sass": "^1.58.0",
+    "sass": "^1.59.3",
     "tailwindcss": "^3.2.4"
   }
 }
